// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`layout resolveStyles Should resolve nested node styles 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "box": Object {
            "height": 200,
            "width": 100,
          },
          "children": Array [
            Object {
              "style": Object {
                "backgroundColor": "red",
                "borderBottomColor": "green",
                "borderBottomStyle": "dotted",
                "borderBottomWidth": 28.346456692913385,
                "borderLeftColor": "green",
                "borderLeftStyle": "dotted",
                "borderLeftWidth": 28.346456692913385,
                "borderRightColor": "green",
                "borderRightStyle": "dotted",
                "borderRightWidth": 28.346456692913385,
                "borderTopColor": "green",
                "borderTopStyle": "dotted",
                "borderTopWidth": 28.346456692913385,
                "paddingBottom": 28.346456692913385,
                "paddingLeft": 720,
                "paddingRight": 720,
                "paddingTop": 28.346456692913385,
              },
              "type": "VIEW",
            },
          ],
          "type": "PAGE",
        },
      ],
      "type": "DOCUMENT",
    },
  ],
  "type": "ROOT",
}
`;

exports[`layout resolveStyles Should resolve nested node styles array 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "box": Object {
            "height": 200,
            "width": 100,
          },
          "children": Array [
            Object {
              "style": Object {
                "backgroundColor": "red",
                "borderBottomColor": "green",
                "borderBottomStyle": "dotted",
                "borderBottomWidth": 28.346456692913385,
                "borderLeftColor": "green",
                "borderLeftStyle": "dotted",
                "borderLeftWidth": 28.346456692913385,
                "borderRightColor": "green",
                "borderRightStyle": "dotted",
                "borderRightWidth": 28.346456692913385,
                "borderTopColor": "green",
                "borderTopStyle": "dotted",
                "borderTopWidth": 28.346456692913385,
                "paddingBottom": 28.346456692913385,
                "paddingLeft": 720,
                "paddingRight": 720,
                "paddingTop": 28.346456692913385,
              },
              "type": "VIEW",
            },
          ],
          "type": "PAGE",
        },
      ],
      "type": "DOCUMENT",
    },
  ],
  "type": "ROOT",
}
`;

exports[`layout resolveStyles Should resolve nested node styles media queries 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "box": Object {
            "height": 200,
            "width": 100,
          },
          "children": Array [
            Object {
              "style": Object {
                "backgroundColor": "green",
              },
              "type": "VIEW",
            },
            Object {
              "style": Object {
                "backgroundColor": "red",
              },
              "type": "VIEW",
            },
          ],
          "type": "PAGE",
        },
      ],
      "type": "DOCUMENT",
    },
  ],
  "type": "ROOT",
}
`;

exports[`layout resolveStyles Should resolve page styles 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "style": Object {
            "backgroundColor": "red",
            "borderBottomColor": "green",
            "borderBottomStyle": "dotted",
            "borderBottomWidth": 28.346456692913385,
            "borderLeftColor": "green",
            "borderLeftStyle": "dotted",
            "borderLeftWidth": 28.346456692913385,
            "borderRightColor": "green",
            "borderRightStyle": "dotted",
            "borderRightWidth": 28.346456692913385,
            "borderTopColor": "green",
            "borderTopStyle": "dotted",
            "borderTopWidth": 28.346456692913385,
            "paddingBottom": 28.346456692913385,
            "paddingLeft": 720,
            "paddingRight": 720,
            "paddingTop": 28.346456692913385,
          },
          "type": "PAGE",
        },
      ],
      "type": "DOCUMENT",
    },
  ],
  "type": "ROOT",
}
`;

exports[`layout resolveStyles Should resolve page styles array 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "style": Object {
            "backgroundColor": "red",
            "borderBottomColor": "green",
            "borderBottomStyle": "dotted",
            "borderBottomWidth": 28.346456692913385,
            "borderLeftColor": "green",
            "borderLeftStyle": "dotted",
            "borderLeftWidth": 28.346456692913385,
            "borderRightColor": "green",
            "borderRightStyle": "dotted",
            "borderRightWidth": 28.346456692913385,
            "borderTopColor": "green",
            "borderTopStyle": "dotted",
            "borderTopWidth": 28.346456692913385,
            "paddingBottom": 28.346456692913385,
            "paddingLeft": 720,
            "paddingRight": 720,
            "paddingTop": 28.346456692913385,
          },
          "type": "PAGE",
        },
      ],
      "type": "DOCUMENT",
    },
  ],
  "type": "ROOT",
}
`;

exports[`layout resolveStyles Should resolve several pages styles 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "style": Object {
            "borderTopColor": "#FF00000",
            "borderTopStyle": "solid",
            "borderTopWidth": 4,
            "paddingBottom": 28.346456692913385,
            "paddingLeft": 720,
            "paddingRight": 720,
            "paddingTop": 28.346456692913385,
          },
          "type": "PAGE",
        },
        Object {
          "style": Object {
            "backgroundColor": "red",
            "borderBottomColor": "green",
            "borderBottomStyle": "dotted",
            "borderBottomWidth": 28.346456692913385,
            "borderLeftColor": "green",
            "borderLeftStyle": "dotted",
            "borderLeftWidth": 28.346456692913385,
            "borderRightColor": "green",
            "borderRightStyle": "dotted",
            "borderRightWidth": 28.346456692913385,
            "borderTopColor": "green",
            "borderTopStyle": "dotted",
            "borderTopWidth": 28.346456692913385,
            "fontWeight": 700,
          },
          "type": "PAGE",
        },
      ],
      "type": "DOCUMENT",
    },
  ],
  "type": "ROOT",
}
`;
